Run tests to validate Java 21 upgrade